delete routes added
